--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 50px;
-            background-image: url('background.jpg'); /* Cambia 'background.jpg' por la URL o el nombre del archivo de imagen */
-            background-size: cover;
-            background-position: center;
+            background-image: url('background.jpg'); /* Usa la URL correcta de la imagen */
+            background-size: cover;  /* Hace que la imagen cubra todo el fondo sin repetirse */
+            background-position: center; /* Centra la imagen */
+            background-repeat: no-repeat; /* Evita que la imagen se repita */
+            background-attachment: fixed; /* Mantiene la imagen fija al hacer scroll */
             color: white;
         }
         h1 {
